--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "html-webpack-plugin": "^4.3.0",
+    "react-router-dom": "^5.2.0",
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
